Review feedback: introduce actual/expected